<resources>
    <string name="app_name">Together We Go</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name</string>
    <string name="nav_header_subtitle">example@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--
      - Baron
      -->
    <string name="slogan">Book and enjoy with us</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login_fb">Login with Facebook</string>
    <string name="login_email">Login with Gmail</string>
    <string name="forgotPW">Forgot password?</string>
    <string name="username">Username</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="facebook_app_id">1634191810023009</string>
    <string name="fb_login_protocol_scheme">fb1634191810023009</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="empty">empty</string>
    <string name="search">Search</string>
    <string name="search_hint">Name or phone number</string>
    <string name="sign_in">Sign in</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Driving</string>
    <string name="title_dashboard">Walking</string>
    <string name="taxi">Taxi</string>
    <string name="isName">Name:</string>
    <string name="isPhone">Phone:</string>
    <string name="isAddress">Address:</string>
    <string name="name_sample">Vinasun</string>
    <string name="phone_sample">38 27 27 27</string>
    <string name="address_sample">306 Điện Biên Phủ, P.22, Q.Bình Thạnh</string>
    <string name="seats">seats</string>
    <string name="fee">Fee Breakdown</string>
    <string name="open_door">Open door (1km)</string>
    <string name="vnd">VND</string>
    <string name="number">9999</string>
    <string name="over_1km">From 1km to 30km</string>
    <string name="over_30km">After 30km</string>
    <string name="sample_address">No. 160, Street 20, Ward 5, Go Vap District</string>
    <string name="where">Where you heading?</string>
    <string name="welcome">Welcome,</string>
    <string name="view">View All</string>
    <string name="hide">Hide</string>
    <string name="web_client_id">899707323390-t8bjp7791dlinj5634olv4rvv4r213sv.apps.googleusercontent.com</string>
</resources>
