<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="236dp"
        android:background="@color/black"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clipToPadding="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_name_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="148dp"
                android:text="@string/isName"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="148dp"
                android:text="@string/name_sample"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/tv_name_default"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_phone_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:text="@string/isPhone"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_default" />


            <TextView
                android:id="@+id/tv_phone"
                android:text="@string/phone_sample"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/tv_phone_default"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_default" />

            <TextView
                android:id="@+id/tv_address_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:text="@string/isAddress"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_phone_default" />

            <TextView
                android:id="@+id/tv_address"
                android:text="@string/address_sample"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/tv_address_default"
                app:layout_constraintTop_toBottomOf="@+id/tv_phone_default" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v4.view.ViewPager
        android:elevation="25dp"
        android:id="@+id/view_pager_test"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clipToPadding="true"/>

</android.support.constraint.ConstraintLayout>