<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginEditText"
        android:layout_marginTop="@dimen/marginEditText"
        android:layout_marginEnd="@dimen/marginEditText"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/username"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="16dp"
                android:paddingStart="16dp"
                android:background="@drawable/shape"
                android:inputType="text"
                tools:ignore="RtlSymmetry" />


            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="16dp"
                android:paddingStart="16dp"
                android:background="@drawable/shape"/>

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="16dp"
                android:paddingStart="16dp"
                android:background="@drawable/shape"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Sign Up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        tools:ignore="HardcodedText" />
    <ProgressBar
        android:id="@+id/loadSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>